--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,9 @@
 body{
     font-family: 'Lexend Peta', sans-serif;
     background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/JETFf6K/simple-background-diamond-l2-color-4k_enmbuhamdg__F0000.png");
+} 
+
+.container{
+   text-align:center;
 }
 
