--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,10 @@ body{
     background-image: url("https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/JETFf6K/simple-background-diamond-l2-color-4k_enmbuhamdg__F0000.png");
 } 
 
+h1{
+    font-family: 'Lobster', cursive;
+}
+
 .container{
    text-align:center;
 }
